<resources>
    <string name="N_A">Wrong passcode</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about_firmware_checking_for_updates">Checking for update...</string>
    <string name="about_firmware_new_version_available">There is a firmware update available!</string>
    <string name="about_firmware_ready_to_install">There is a firmware update ready to install!</string>
    <string name="about_firmware_up_to_date">Your lock\'s firmware is up to date.</string>
    <string name="about_firmware_version">Firmware Version: %s</string>
    <string name="about_lock_device_id">Device: %s</string>
    <string name="about_lock_device_id_ios">Device:</string>
    <string name="about_lock_info">Lorem ipsum some more info.</string>
    <string name="about_lock_model_num">Model # %s</string>
    <string name="about_lock_model_number">Model #:</string>
    <string name="about_lock_model_number_colon">Model #:</string>
    <string name="about_lock_name">%s</string>
    <string name="about_lock_title">About This Lock</string>
    <string name="about_this_lock_battery_label">Battery Life:</string>
    <string name="about_this_lock_battey_label">Battery Life:</string>
    <string name="about_this_lock_label">About This Lock</string>
    <string name="about_this_update_app_message">A firmware update is available for this lock, but you must first update the Master Lock Vault eLocks app.</string>
    <string name="accept">Back</string>
    <string name="accept_button">Accept</string>
    <string name="account_label">Account</string>
    <string name="account_profile_email">Email Address</string>
    <string name="account_profile_name">Name</string>
    <string name="account_profile_password">Password</string>
    <string name="account_profile_phone_number">Mobile Phone Number</string>
    <string name="account_profile_time_zone">Time Zone</string>
    <string name="account_profile_username">Username</string>
    <string name="account_setting_default_language_text">Default(Smartphone Settings)</string>
    <string name="account_setting_language_selection_body">The MasterLock Vault eLocks app language and regional settings will correspond to your smartphone\'s settings, unless you override them here.</string>
    <string name="account_setting_language_selection_title">Language Selection</string>
    <string name="account_setting_notifications_title">Notifications</string>
    <string name="account_setting_profile_title">Account Profile</string>
    <string name="account_sign_in_title">Sign In</string>
    <string name="action_settings">Settings</string>
    <string name="active_button_text">Selected</string>
    <string name="active_x_days_ago">Active [#] [\"days\" | \"hours\" | \"minutes\" | \"seconds\"] ago.</string>
    <string name="add_a_guest">Add a Guest</string>
    <string name="add_a_lock_button">Add a Lock</string>
    <string name="add_lock_botton_title">2. Enter the Activation Code located on the instructions.</string>
    <string name="add_lock_instructions">Enter your lock\'s Activation Code.</string>
    <string name="add_lock_instructions_full">To locate your lock’s Activation Code, remove the instructions from the lock packaging.\10\10The Activation Code is located at the top of the instructions sheet.</string>
    <string name="add_lock_instructions_full_2">The Activation Code is located at the top of the instructions sheet.</string>
    <string name="add_lock_instructions_in_box">In Box</string>
    <string name="add_lock_instructions_instruction1">1. Cut through the two plastic ribs above the shackle, remove your lock, and then remove the instructions.</string>
    <string name="add_lock_instructions_instruction1_box">1. Remove instructions from box.</string>
    <string name="add_lock_instructions_instruction2">2. Enter the activation code located on the instructions.</string>
    <string name="add_lock_instructions_on_card">On Card</string>
    <string name="add_lock_instructions_subtext">To locate your lock\'s Activation Code:</string>
    <string name="add_lock_left_instructions">Remove Instructions From Box.</string>
    <string name="add_lock_left_title">In Box</string>
    <string name="add_lock_right_instructions">Cut through the two plastic ribs above the shackle, remove your lock and then remove the instructions.</string>
    <string name="add_lock_right_number">1</string>
    <string name="add_lock_right_title">On Card</string>
    <string name="add_lock_to_locate_activation_code">To locate your lock\'s Activation Code:</string>
    <string name="add_to_this_lock">Add Guest to Lock</string>
    <string name="additional_notes">Notes (optional)</string>
    <string name="address_approximate">Address (APPROXIMATE):</string>
    <string name="already_a_member">Already have an account?</string>
    <string name="api_key">androidble</string>
    <string name="app_display_name">Master Lock</string>
    <string name="app_font">fonts/Roboto-Regular.ttf</string>
    <string name="app_font_bold">fonts/Roboto-Bold.ttf</string>
    <string name="app_font_light">fonts/Roboto-Light.ttf</string>
    <string name="app_font_medium">fonts/Roboto-Medium.ttf</string>
    <string name="app_name">Master Lock</string>
    <string name="app_version">Version %s</string>
    <string name="apply_change_save_error">Error saving update</string>
    <string name="apply_firmware_update">Install</string>
    <string name="apply_primary_code">Apply</string>
    <string name="backup_master_code_instructions">This is your lock\'s unique backup master code. This code cannot be changed.</string>
    <string name="backup_master_combination_label">Backup Master Code</string>
    <string name="btn_continue">Continue</string>
    <string name="cancel">Cancel</string>
    <string name="change_email_address_instruction">Input your new email address below.\10A verification code will be sent to you.</string>
    <string name="change_email_current_email_address_label">Current Email Address</string>
    <string name="change_email_new_email_address_instruction">Please check your inbox for and email from Master Lock. Input the verification code you received below.</string>
    <string name="change_email_new_email_address_label">New Email Address</string>
    <string name="change_email_placeholder">Enter your email address</string>
    <string name="continue_button">Continue</string>
    <string name="create_account">Create Account</string>
    <string name="dont_have_an_account">Don\'t have an account yet?</string>
    <string name="edit_timezone_prompt">Select a Time Zone</string>
    <string name="email_verification_hint">Verification Code</string>
    <string name="forgot_username_button_text">Retrieve Username</string>
    <string name="forgot_username_info">Enter your email address to retrieve your username.</string>
    <string name="forgot_username_passcode">Forgot Username or Password?</string>
    <string name="forgot_username_title">Forgot Username</string>
    <string name="ok">OK</string>
    <string name="password">Password</string>
    <string name="permissions_grant_permission_button">GRANT PERMISSION</string>
    <string name="permissions_notifications_description">We need your permission to send you push notifications. This will allow us to send you important information about your locks when available.\10\10You can disable this at any time.</string>
    <string name="permissions_notifications_title">Enable Notifications?</string>
    <string name="permissions_skip_for_now_button">Skip for now</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="profile_dialog_body">You can manage your profile on the Master Lock Vault website, where you will also find additional free features.</string>
    <string name="profile_dialog_title">Master Lock Vault</string>
    <string name="profile_setting_change_phone_number_new_place_holder">New Mobile Phone Number</string>
    <string name="profile_setting_change_phone_resend_verification_code">Resend verification code</string>
    <string name="profile_setting_change_phone_sent_sms_instructions">We sent an SMS to the phone number you provided. Input the verification code you received below.</string>
    <string name="profile_setting_change_timezone_instructions">You can update the time zone associated with your account here.</string>
    <string name="profile_setting_change_timezone_propagate_slider">Also change the time zones associated with your locks</string>
    <string name="resend_email">Resend Verification Email</string>
    <string name="reset_keys_dialog_body">Every phone that has access to this lock will have to retrieve new keys from the server before they are able to unlock the lock again.</string>
    <string name="reset_keys_dialog_title">Reset Keys?</string>
    <string name="save_lock_notes">Save</string>
    <string name="settings_name_save">Save</string>
    <string name="sign_in_title">Account Sign In</string>
    <string name="sign_up_2016_username_required">Username</string>
    <string name="sign_up_2016_view_1_email_placeholder">Email Address (required)</string>
    <string name="sign_up_2016_view_1_terms_and_privacy">By continuing, you agree to our Terms of Use.</string>
</resources>