<?xml version="1.0" encoding="utf-8"?>
<com.masterlock.ble.app.view.signin.SignInView xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:orientation="vertical" android:background="@drawable/account_sign_up_sign_in_screens_background" android:layout_width="match_parent" android:layout_height="match_parent">
    <RelativeLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="match_parent">
        <RelativeLayout android:id="@+id/rl_header" android:layout_width="match_parent" android:layout_height="wrap_content">
            <LinearLayout android:gravity="center" android:orientation="horizontal" android:id="@+id/ll_logo_container" android:layout_width="match_parent" android:layout_height="wrap_content" android:weightSum="100">
                <ImageView android:id="@+id/iv_logo" android:layout_width="0dp" android:layout_height="wrap_content" android:src="@drawable/graphic_logo_white" android:layout_weight="40" android:layout_centerHorizontal="true"/>
            </LinearLayout>
            <com.masterlock.ble.app.view.CustomFontTextView android:textStyle="bold" android:layout_gravity="center" android:text="@string/sign_in_title" android:layout_below="@+id/ll_logo_container" android:layout_centerHorizontal="true" android:textAllCaps="true" style="@style/AppTheme.HeaderLabel"/>
        </RelativeLayout>
        <LinearLayout android:orientation="vertical" android:id="@+id/ll_body" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/space_m2" android:layout_below="@+id/rl_header" style="@style/AppTheme.BodyPanel">
            <EditText android:id="@+id/username_edit_text" android:layout_marginBottom="@dimen/space_m2" android:hint="@string/sign_up_2016_username_required" android:inputType="textEmailAddress" style="@style/CustomEditTextStyle"/>
            <EditText android:id="@+id/password_edit_text" android:layout_marginBottom="@dimen/space_m2" android:hint="@string/password" android:layout_below="@+id/username_edit_text" android:inputType="textPassword" android:imeOptions="actionDone" style="@style/CustomEditTextStyle"/>
            <TextView android:gravity="center" android:id="@+id/forgot" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/forgot_username_passcode" android:layout_below="@+id/password_edit_text" style="@style/TextAppearance.AppCompat.Medium.Inverse"/>
        </LinearLayout>
        <LinearLayout android:gravity="bottom" android:orientation="vertical" android:id="@+id/ll_footer" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_alignParentBottom="true">
            <LinearLayout android:gravity="center" android:orientation="horizontal" style="@style/AppTheme.Footer.Account">
                <TextView android:textColor="@color/white" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="@dimen/space_m0" android:text="@string/dont_have_an_account" style="@style/TextAppearance.AppCompat.Small"/>
                <Button android:textAppearance="?android:attr/textAppearanceSmall" android:textSize="@null" android:textStyle="bold" android:textColor="@color/white" android:id="@+id/sign_up_button" android:text="@string/create_account" style="@style/FlatButtonWidget"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout android:gravity="bottom" android:orientation="vertical" android:id="@+id/ll_privacy_container" android:paddingBottom="@dimen/space_m2" android:layout_width="match_parent" android:layout_height="match_parent" android:layout_above="@+id/ll_footer" android:layout_below="@+id/ll_body">
            <LinearLayout android:orientation="vertical" android:paddingBottom="@dimen/space_m5" android:layout_width="match_parent" android:layout_height="wrap_content">
                <TextView android:gravity="center" android:id="@+id/tos" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/sign_up_2016_view_1_terms_and_privacy" style="@style/TextAppearance.AppCompat.Small.Inverse"/>
                <TextView android:textColor="@color/white" android:gravity="center" android:id="@+id/privacy_policy" android:paddingTop="@dimen/space_m0" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/privacy_policy" style="@style/TextAppearance.AppCompat.Small"/>
            </LinearLayout>
            <Button android:textColor="@color/white" android:id="@+id/sign_in_button" android:background="@drawable/button_shape_transparent_stroke_white" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/activity_horizontal_margin" android:layout_marginRight="@dimen/activity_horizontal_margin" android:text="@string/btn_continue" android:textAllCaps="false" style="@style/TextAppearance.AppCompat.Medium"/>
        </LinearLayout>
    </RelativeLayout>
</com.masterlock.ble.app.view.signin.SignInView>
