<?xml version="1.0" encoding="utf-8"?>
<com.masterlock.ble.app.view.nav.settings.VerifyNewPhoneView xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:orientation="vertical" android:background="@color/white" android:layout_width="match_parent" android:layout_height="match_parent">
    <RelativeLayout android:layout_width="match_parent" android:layout_height="match_parent">
        <ScrollView android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_above="@+id/bt_resend_sms" android:layout_alignParentTop="true">
            <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content">
                <TextView android:layout_gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/space_m2" android:text="@string/profile_setting_change_phone_number_new_place_holder" style="@style/TextAppearance.AppCompat.Medium"/>
                <TextView android:layout_gravity="center" android:id="@+id/tv_new_phone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/space_m0" style="@style/TextAppearance.AppCompat.Small"/>
                <TextView android:layout_gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/space_m3" android:layout_marginTop="@dimen/space_m5" android:layout_marginRight="@dimen/space_m3" android:text="@string/profile_setting_change_phone_sent_sms_instructions" style="@style/TextAppearance.AppCompat.Medium"/>
                <EditText android:gravity="center" android:id="@+id/et_verification_code" android:layout_margin="@dimen/space_m3" android:hint="@string/email_verification_hint" android:inputType="number" style="@style/CustomEditTextStyleBlack"/>
            </LinearLayout>
        </ScrollView>
        <Button android:id="@+id/bt_resend_sms" android:text="@string/profile_setting_change_phone_resend_verification_code" android:layout_above="@+id/bt_continue" android:layout_alignParentBottom="false" style="@style/Widget.AccountSettingsSaveButton"/>
        <Button android:id="@+id/bt_continue" android:text="@string/continue_button" style="@style/Widget.AccountSettingsSaveButton"/>
    </RelativeLayout>
</com.masterlock.ble.app.view.nav.settings.VerifyNewPhoneView>
