<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:orientation="vertical" android:background="@color/secondary_light" android:layout_width="match_parent" android:layout_height="match_parent">
    <TextView android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="24dp" android:text="@string/reset_keys_dialog_title" android:layout_marginStart="@dimen/space_m2" android:layout_marginEnd="@dimen/space_m2" style="@style/TextAppearance.AppCompat.Title"/>
    <TextView android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="24dp" android:layout_marginBottom="24dp" android:text="@string/reset_keys_dialog_body" android:layout_marginStart="@dimen/space_m2" android:layout_marginEnd="@dimen/space_m2"/>
    <LinearLayout android:gravity="right|center_vertical|center_horizontal|center|end" android:orientation="horizontal" android:id="@+id/button_bar" android:layout_width="match_parent" android:layout_height="wrap_content" style="?attr/buttonBarStyle">
        <Button android:textColor="@color/text_color_primary" android:id="@+id/negative_button" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/space_m2" android:layout_marginBottom="@dimen/space_m2" android:text="@string/cancel" style="?android:attr/buttonBarButtonStyle"/>
        <Button android:id="@+id/positive_button" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/space_m2" android:layout_marginBottom="@dimen/space_m2" android:text="@string/ok" style="?android:attr/buttonBarButtonStyle"/>
    </LinearLayout>
</LinearLayout>
