<?xml version="1.0" encoding="utf-8"?>
<com.masterlock.ble.app.view.nav.settings.VerifyNewEmailView xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:orientation="vertical" android:background="@color/white" android:layout_width="match_parent" android:layout_height="match_parent">
    <RelativeLayout android:layout_width="match_parent" android:layout_height="match_parent">
        <ScrollView android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_above="@+id/new_email_resend_btn" android:layout_alignParentTop="true" style="@style/AppTheme.BodyPanel">
            <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content">
                <TextView android:layout_gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/space_m2" android:text="@string/change_email_new_email_address_label" style="@style/TextAppearance.AppCompat.Medium"/>
                <TextView android:layout_gravity="center" android:id="@+id/new_email_address" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/space_m0" style="@style/TextAppearance.AppCompat.Small"/>
                <TextView android:layout_gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/space_m5" android:text="@string/change_email_new_email_address_instruction" style="@style/TextAppearance.AppCompat.Medium"/>
                <EditText android:gravity="center" android:id="@+id/email_verification_code" android:layout_margin="@dimen/space_m3" android:hint="@string/email_verification_hint" android:inputType="textEmailAddress" style="@style/CustomEditTextStyleBlack"/>
            </LinearLayout>
        </ScrollView>
        <Button android:theme="@style/AccountSettingsButtonTheme" android:textColor="@color/white" android:id="@+id/new_email_resend_btn" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/space_m2" android:layout_marginTop="@dimen/space_m2" android:layout_marginRight="@dimen/space_m2" android:text="@string/resend_email" android:layout_above="@+id/new_email_continue_btn"/>
        <Button android:id="@+id/new_email_continue_btn" android:text="@string/continue_button" style="@style/Widget.AccountSettingsSaveButton"/>
    </RelativeLayout>
</com.masterlock.ble.app.view.nav.settings.VerifyNewEmailView>
